--- a/index.html
+++ b/index.html
@@ -17,59 +17,68 @@
 </head>
 
 <body>
-  <div class="top-image">
-    <img src="images/bb_numbers.jpg" />
-    <div class="top-section-text">
-      <div class="wrap">
-        <div class="top-title">An Internet Built For All: Fast, Affordable, Competitive</div>
-        <h1 class="page-title">Broadband by the Numbers</h1>
-        <div class="intro-text section-text">
-          <p>The Internet has transformed our lives and the way we learn, communicate, shop, are entertained and so much more.
-            Wired and wireless networks keep us constantly connected no matter where we are. Fast and affordable broadband networks
-            are powering dynamic services and applications that make America a leader in today’s global digital economy.</p>
-          <p>Scroll down to see how America’s broadband story has unfolded.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <div class="wrap">
-      <h2 class="section-title">Need for Speed</h2>
-      <div class="section-text">
-        <p>The more we use the Internet, the more speed we want. Cable networks' ever-increasing speeds fuel
-          all the streaming, downloading and gaming you want. In just the last few years, maximum speeds have
-          quadrupled – now up to 2 Gigabits per second.
-        </p>
-      </div>
-    </div>
-  </div>
-
-    <div class="section">
-      <div class="wrap">
-        <h2 class="section-title">Broadband Adoption Over Time</h2>
-        <div class="section-text">
-          <p>As of 2019, 81 percent of American households have cable broadband, and can take advantage
-            of all the opportunities the Internet offers. But we need to convince all consumers that a
-            broadband connection can enhance their lives.
-          </p>
+  <div class="section-wrap">
+    <div class="section top">
+      <img src="images/bb_numbers_header.jpg" />
+      <div class="top-section-text">
+        <div class="wrap">
+          <div class="text-wrap">
+            <div class="top-title">An Internet Built For All: Fast, Affordable, Competitive</div>
+            <h1 class="page-title">Broadband by the Numbers</h1>
+            <div class="intro-text section-text">
+              <p>The Internet has transformed our lives and the way we learn, communicate, shop, are entertained and so much more.
+                Wired and wireless networks keep us constantly connected no matter where we are. Fast and affordable broadband networks
+                are powering dynamic services and applications that make America a leader in today’s global digital economy.</p>
+              <p>Scroll down to see how America’s broadband story has unfolded.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="section">
+    <div class="section white">
       <div class="wrap">
-        <h2 class="section-title">Growth in Broadband Customers</h2>
-        <div class="section-text">
-          <p>Today, there are over 66 million cable broadband customers, each one proving the
-            importance and value of a fast broadband connection.</p>
+        <div class="text-wrap">
+          <h2 class="section-title">Need for Speed</h2>
+          <div class="section-text">
+            <p>The more we use the Internet, the more speed we want. Cable networks' ever-increasing speeds fuel
+              all the streaming, downloading and gaming you want. In just the last few years, maximum speeds have
+              quadrupled – now up to 2 Gigabits per second.
+            </p>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="section">
+    <div class="section gray">
       <div class="wrap">
-        <div class="intro">
+        <div class="text-wrap">
+          <h2 class="section-title">Broadband Adoption Over Time</h2>
+          <div class="section-text">
+            <p>As of 2019, 81 percent of American households have cable broadband, and can take advantage
+              of all the opportunities the Internet offers. But we need to convince all consumers that a
+              broadband connection can enhance their lives.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section blue">
+      <div class="wrap">
+        <div class="text-wrap">
+          <h2 class="section-title">Growth in Broadband Customers</h2>
+          <div class="section-text">
+            <p>Today, there are over 66 million cable broadband customers, each one proving the
+              importance and value of a fast broadband connection.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section white">
+      <div class="wrap">
+        <div class="text-wrap">
           <h2 class="section-title">Infrastructure and Investment</h2>
           <div class="section-text">
             <p>America's Internet builders have invested $290 Billion of private capital to deploy broadband networks that reach
