set-up bouncing arrow in header section

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
       <div class="top-section-text">
         <div class="wrap">
           <div class="text-wrap">
-            <div class="top-title">An Internet Built For All: Fast, Affordable, Competitive</div>
+            <div class="top-title">An Internet Built For All</div>
             <h1 class="page-title">Broadband by the Numbers</h1>
             <div class="intro-text section-text">
               <p>The Internet has transformed our lives and the way we learn, communicate, shop, are entertained and so much more.
                 Wired and wireless networks keep us constantly connected no matter where we are. Fast and affordable broadband networks
                 are powering dynamic services and applications that make America a leader in today’s global digital economy.</p>
-              <p>Scroll down to see how America’s broadband story has unfolded.</p>
             </div>
+            <div class="down-arrow"></div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="section white">
+    <div class="section main white">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Need for Speed</h2>
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="section gray">
+    <div class="section main gray">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Broadband Adoption Over Time</h2>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="section blue">
+    <div class="section main blue">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Growth in Broadband Customers</h2>
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-    <div class="section white">
+    <div class="section main white">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Infrastructure and Investment</h2>
