set up basic scroll story framework

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 </head>
 
 <body>
-  <div class="section-wrap">
-    <div class="section top">
-      <img src="images/bb_numbers_header.jpg" />
+  <div class="story-wrap">
+    <div class="story top image-section">
+      <div class="image-wrap">
+        <div class="image">
+          <img src="images/bb_numbers_header.jpg" />
+        </div>
+      </div>
       <div class="top-section-text">
         <div class="wrap">
           <div class="text-wrap">
@@ -36,7 +40,7 @@
       </div>
     </div>
 
-    <div class="section main white">
+    <div class="story chart-section main white">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Need for Speed</h2>
@@ -50,7 +54,7 @@
       </div>
     </div>
 
-    <div class="section main gray">
+    <div class="story chart-section main gray">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Broadband Adoption Over Time</h2>
@@ -64,7 +68,7 @@
       </div>
     </div>
 
-    <div class="section main blue">
+    <div class="story chart-section main blue">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Growth in Broadband Customers</h2>
@@ -76,7 +80,7 @@
       </div>
     </div>
 
-    <div class="section main white">
+    <div class="story chart-section main white">
       <div class="wrap">
         <div class="text-wrap">
           <h2 class="section-title">Infrastructure and Investment</h2>
@@ -94,6 +98,7 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/d3.v3.min.js"></script>
+  <script src="js/jquery.scrollstory.js"></script>
   <script src="js/scroll_snapping.js"></script>
 
 </body>
