made the header image a background image

--- a/index.html
+++ b/index.html
@@ -20,21 +20,18 @@
   <div class="story-wrap">
     <div class="story top image-section">
       <div class="image-wrap">
-        <div class="image">
-          <img src="images/bb_numbers_header.jpg" />
-        </div>
-      </div>
-      <div class="top-section-text">
-        <div class="wrap">
-          <div class="text-wrap">
-            <div class="top-title">An Internet Built For All</div>
-            <h1 class="page-title">Broadband by the Numbers</h1>
-            <div class="intro-text section-text">
-              <p>The Internet has transformed our lives and the way we learn, communicate, shop, are entertained and so much more.
-                Wired and wireless networks keep us constantly connected no matter where we are. Fast and affordable broadband networks
-                are powering dynamic services and applications that make America a leader in today’s global digital economy.</p>
+        <div class="top-section-text">
+          <div class="wrap">
+            <div class="text-wrap">
+              <div class="top-title">An Internet Built For All</div>
+              <h1 class="page-title">Broadband by the Numbers</h1>
+              <div class="intro-text section-text">
+                <p>The Internet has transformed our lives and the way we learn, communicate, shop, are entertained and so much more.
+                  Wired and wireless networks keep us constantly connected no matter where we are. Fast and affordable broadband networks
+                  are powering dynamic services and applications that make America a leader in today’s global digital economy.</p>
+              </div>
+              <div class="down-arrow"></div>
             </div>
-            <div class="down-arrow"></div>
           </div>
         </div>
       </div>
@@ -98,8 +95,8 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/d3.v3.min.js"></script>
-  <script src="js/jquery.scrollstory.js"></script>
-  <script src="js/scroll_snapping.js"></script>
+  <!--<script src="js/jquery.scrollstory.js"></script>-->
+  <!--<script src="js/scroll_snapping.js"></script>-->
 
 </body>
 
