added new parallax image section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
       </div>
     </div>
 
+    <div class="story main mid image-section">
+      <div class="image-wrap">
+        <div class="wrap">
+          <div class="text-wrap">
+            <h2 class="section-title">Test Image Paralax Section</h2>
+            <div class="section-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lobortis dui magna, nec tincidunt
+                justo malesuada eu. Ut sem libero, laoreet eu nisl congue, lobortis sodales nulla.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="story chart-section main blue">
       <div class="wrap">
         <div class="text-wrap">
